# SMPL

./: .gitignore  CMakeLists.txt  README.md  example.smpl
include/: smpl.hpp
include/ast/: ast_kinds.hpp  binary.hpp  expr.hpp  grouping.hpp  num_literal.hpp
include/ast/expr/: binary.hpp  boolean_literal.hpp  cond_expr.hpp  expr.hpp  fncall.hpp  grouping.hpp  identifier.hpp  num_literal.hpp  string_literal.hpp  type.hpp  unary.hpp
include/ast/stmt/: assignment.hpp  block.hpp  condition_block.hpp  expr_stmt.hpp  fndecl.hpp  for.hpp  if.hpp  param.hpp  return.hpp  stmt.hpp  unary.hpp  while.hpp
include/ast/visitor/: ast_printer.hpp  visitor.hpp
include/code_generator/: codegen.hpp
include/error_reporter/: compiler_err.hpp  parsing_error.hpp  syntax_err.hpp
include/lexer/: lexer.hpp  token.hpp  tokenkind.hpp
include/parser/: parser.hpp
include/semantic_analyzer/: semantic_analyzer.hpp
include/smpl/: builtins.hpp  smpl.hpp  symbol.hpp  type_checker.hpp  types.hpp
include/smpl/symbol/: func_symbol.hpp  symbol.hpp  symbolkind.hpp  var_symbol.hpp
include/token/: token.hpp  tokenkind.hpp
include/visitor/: ast_printer.hpp  visitor.hpp
src/: main.cpp  smpl.cpp
src/ast/: binary.cpp  grouping.cpp  num_literal.cpp
src/ast/expr/: binary.cpp  boolean_literal.cpp  cond_expr.cpp  (+7 more)
src/code_generator/: codegen.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: parser.cpp
src/semantic_analyzer/: semantic_analyzer.cpp
src/smpl/: builtins.cpp  smpl.cpp  symbol.cpp  type_checker.cpp  types.cpp
src/token/: token.cpp
src/visitor/: ast_printer.cpp
(+13 files in other folders)
